# bscore-lib

./: Cargo.toml  README.md
include/: bscore_lib.h
sample/: bowling_score.cpp
src/: lib.rs
